--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <link rel="stylesheet" href="css/styles.css">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome to Kokoa Clone</title>
+    
 </head>
 <body>
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
             <!-- To Do: wifi icon -->
+            <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
             <span>18:43</span>
@@ -18,8 +22,27 @@
         <div class="status-bar__column">
             <span>11%</span>
             <!-- Battery Icon -->
+            <i class="fas fa-battery-three-quarters "></i>
             <!-- Lightning Icon -->
+            <i class="fas fa-bolt"></i>
         </div>
     </div>
+
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">Welcome to KokoaTalk</h1>
+        <p class="welcome-header__text">
+            If you have a Kokoa Account, log in with your email or phone number.
+        </p>
+    </header>
+
+    <form id="login-form" action="friends.html" method="get">
+        <input name="username" type="text" placeholder="Email or phone number" />
+        <input name="password" type="text" placeholder="Password" />
+        <input type="submit" value="Log In" />
+        <a href="#">Find Kokoa Account or Password</a>
+    </form>
+
+    
+    <script src="https://kit.fontawesome.com/f278928c1f.js" crossorigin="anonymous"></script>  
 </body>
 </html>
